import { Drawable } from "./Drawable";

export class Line extends Drawable {}