@startuml Pong

' class index {
'   userInput
' }

' note bottom of index
' Connected to
' window.addEventListener()
' end note

' class config {

' }

' enum Players {
'   PLAYER
'   COMPUTER
' }

Entity UserControl {
  dict
  init()
}

entity Opening {
  init()
  update(): boolean
  draw()
  loop(timestamp)
}

entity Game {
  playerScore
  computerScore
  ballLaunchTimer
  onScored(entity)
  scheduleBallLaunch(frames)
  init()
  update(): boolean
  draw()
  loop(timestamp)
}

class Paddle {
  speed
  input()
  updateVelocity()
  update()
}

class Ball {
  speed, acceleration
  angle, deltaAngle
  lastHitBy
  boundLeftwardScale()
  ' boundRightwardScale()
  updateVelocity()
  randomAngle()
  ' flipHorizontally()
  ' boundByCollision(paddle)
  updateBasedOnCanvasBoundary(canvas)
  updateBasedOnCollision(paddle, computer)
  update(player, computer, canvas)
}

class Line {
}

entity Ending {
  playerScore
  computerScore
  init(playerScore, computerScore)
  update(): boolean
  draw()
  loop(timestamp)
}

abstract Drawable {
  width, height
  x, y
  draw(context)
}

abstract Movable {
  vx, vy
  updatePosition()
}

Opening .> Game
Game .> Ending
Ending .> Opening

Game *--- Paddle
Game *--- Ball
Game *-- Line

Drawable <|-- Movable
Drawable <|-- Line

Movable <|-- Paddle
Movable <|-- Ball

UserControl <.. Paddle: <<Use>>
JSON ..> UserControl 
keyDownEvent ..> UserControl
touchEvent ..> UserControl
@enduml
